--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>hello india</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam, modi.</p>
 </body>
 </html>
