--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>hello india</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam, modi.</p>
+    <h1>hello my friends</h1>
 </body>
 </html>
