--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <h1>ami akta profesonal web developer hote chai..</h1>
     <h2>amr mone santi nai.</h2>
     <button>clike here !!</button>
+    <button>click me</button>
+    <button>like here</button>
 </body>
 </html>
