--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
     <h1>hello india</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam, modi.</p>
     <h1>hello my friends</h1>
+    <h1>ami akta profesonal web developer hote chai..</h1>
+    <h2>amr mone santi nai.</h2>
+    <button>clike here !!</button>
+    <button>click me</button>
+    <button>like here</button>
+    <button> like me</button>
 </body>
 </html>
